--- a/_config.yml
+++ b/_config.yml
@@ -18,7 +18,7 @@
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
 
-title: Matt Hill
+title: Matthew Hill
 email: contact@mjh.space
 description: >- # this means to ignore newlines until "baseurl:"
   I'm a solution architect and data scientist. I'm interested solving problems 
